[metadata]
name = netsu
license = GPLv3
author = Petr Horacek
author_email = phoracek@redhat.com
url = https://www.github.com/netsu-project/netsu

[files]
packages =
  netsu
data_files =
  /etc/netsu =
    conf/uwsgi.ini
  /var/lib/netsu =

[entry_points]
console_scripts =
  netsu-ctl = netsu.service.netsuctl:main
